# dpdp_rust

./: Cargo.toml
src/: lib.rs  main.rs
src/callbacks/: log_dispatch.rs  mod.rs
src/model/: factory_info.rs  mod.rs  order.rs  order_item.rs  route_info.rs  vehicle_info.rs
src/schedule/: mod.rs  naive.rs  noop.rs
src/simulation/: callback.rs  event_queue.rs  mod.rs  sim_event.rs  simulator.rs
src/utils/: mod.rs
