[package]
name = "dpdp_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
chrono = { version = "0.4.40", features = ["serde"] }
csv = "1.3.1"
derivative = "2.2.0"
dyn-clone = "1.0.19"
humantime = "2.1.0"
ordered-float = "5.0.0"
rand = "0.9.0"
reqwest = { version = "0.12.13", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["rc", "serde_derive"] }
serde_json = "1.0.140"
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-subscriber = "0.3.19"
